Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15748

interop: sanity test_150b: fallocate failed, error Operation not supported, mode 0, offset 62914560, len 4194304

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0, Lustre 2.15.0
    • Lustre 2.15.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Cliff White <cwhite@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/1c15b404-f4af-4275-9a77-f5a50b30ca56

      keep default fallocate mode: 0
      fallocate failed, error Operation not supported, mode 0, offset 62914560, len 4194304
       sanity test_150b: @@@@@@ FAIL: fallocate failed 
        Trace dump:
        = /usr/lib64/lustre/tests/test-framework.sh:6273:error()
        = /usr/lib64/lustre/tests/sanity.sh:13441:test_150b()
        = /usr/lib64/lustre/tests/test-framework.sh:6576:run_one()
        = /usr/lib64/lustre/tests/test-framework.sh:6623:run_one_logged()
        = /usr/lib64/lustre/tests/test-framework.sh:6465:run_test()
        = /usr/lib64/lustre/tests/sanity.sh:13443:main()
      Dumping lctl log to /autotest/autotest-1/2022-04-03/lustre-master_full-part-2_4283_1_29_b51025b5-001f-45f2-9eb2-ebe47692e36c//sanity.test_150b.*.1649017567.log
      

            arshad512 Arshad Hussain
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: